--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -73,7 +73,7 @@
 	          <li class="nav-item"><a href="/blog" class="nav-link">Notícias</a></li>
 	          <li class="nav-item"><a href="/contact" class="nav-link">Contato</a></li>
 			  <li class="nav-item"><a href="/usuario/login" class="nav-link">Entrar</a></li>
-	          <li class="nav-item cta cta-colored"><a href="#" class="nav-link btn-cart"><span class="icon-shopping_cart"></span>[0]</a></li>
+	          <li class="nav-item cta cta-colored"><a href="/shop" class="nav-link btn-cart"><span class="icon-shopping_cart"></span>[0]</a></li>
 			  <li class="nav-item"><a href="/admin/adminLogin" class="nav-link">Admin</a></li>
 
 	        </ul>
