--- a/views/admin/cadastrarProd.ejs
+++ b/views/admin/cadastrarProd.ejs
@@ -1,4 +1,4 @@
-<script src="/js/js/cadastrarItem.js" defer></script>
+<script src="/js/js/cadastrarProd.js" defer></script>
 <div class="container">
     <h1>Cadastro de Itens</h1>
     <div id="form">
@@ -7,10 +7,6 @@
                 <option value="0" disabled selected>Selecione...</option>
                 <option value="1">Produto</option>
                 <option value="2">Insumo</option>
-                <option value="3">Serviços</option>
-                <option value="4">Equipamento Agricola</option>
-                <option value="5">Marca</option>
-                <option value="6">Categoria</option>
             </select>
             <label for="tipoItem">Tipo de Item</label>
         </div>
@@ -25,15 +21,6 @@
         <div class="form-floating mb-3" id="descricao">
             <input type="text" class="form-control" id="descricaoval" placeholder=" " maxlength="100">
             <label for="descricao">Descrição:</label>
-        </div>
-        <div class="form-floating mb-3" id="marca">
-            <select name="marca" id="marcaval" class="form-control">
-            <option value="0" selected>...</option>
-            <% for(let i=0; i<listaMarcas.length ; i++) {%>
-                <option value="<%=listaMarcas[i].id%>"><%=listaMarcas[i].nome%></option>
-                <%}%>
-            </select>
-            <label for="tipoItem">Marca:</label>
         </div>
         <div class="form-floating mb-3" id="categoria">
             <select name="categoria" id="categoriaval" class="form-control">
