--- a/views/admin/listagem.ejs
+++ b/views/admin/listagem.ejs
@@ -1,7 +1,6 @@
 <script src="/js/js/listagem.js" defer></script>
 <div class="container-sm">
     <h1>Listagem de Itens</h1>
-    <a href="/admin/cadastrarItem" class="btn btn-primary">Cadastrar Novo Item</a>
     <a href="/admin" class="btn btn-secondary">Voltar</a>
     <div class="form-floating mt-3">
         <select name="select" id="select" class="form-control">
@@ -15,7 +14,7 @@
         <label for="select">Tipo de Item</label>
     </div>
 
-    <table class="table table-bordered mt-3" style="color: #000;" id="1"> <!--LISTA PRODUTOS, INSUMOS E SERVIÇOS-->
+    <table class="table table-bordered mt-3" style="color: #000;" id="1"> <!--LISTA PRODUTOS-->
         <thead>
             <th>ID</th>
             <th>Nome</th>
@@ -24,10 +23,11 @@
             <th>Descrição</th>
             <th>Categoria</th>
             <th>Alterar/Excluir</th>
+            <th><a href="/admin/CadastrarProd">Cadastrar novo</a></th>
         </thead>
         <tbody>
             <%for(let i=0;i<listaProdutos.length;i++) {%>
-                <tr class="<%="tipo"+listaProdutos[i].tipo%>" data-tipoLinha= <%=listaProdutos[i].tipo%>>
+                <tr>
                     <td><%=listaProdutos[i].id%></td>
                     <td><%=listaProdutos[i].nome%></td>
                     <td><%=listaProdutos[i].preco%>R$</td>
@@ -35,8 +35,64 @@
                     <td><%=listaProdutos[i].descricao%></td>
                     <td><%=listaProdutos[i].categoria_nome%></td>
                     <td>
-                        <a href="/admin/alterarItem/<%=listaProdutos[i].tipo%>/<%=listaProdutos[i].id%>" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
+                        <a href="/admin/alterarItem/1/<%=listaProdutos[i].id%>" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
                         <button data-id="<%=listaProdutos[i].id%>" data-tipo="1"  data-nome='<%=listaProdutos[i].nome%>' class="btn btn-danger btnExcluir"><i class="bi bi-trash-fill"></i></button>
+                    </td>
+                </tr>
+            <%}%>
+        </tbody>
+    </table>
+
+    <table class="table table-bordered mt-3" style="color: #000;" id="2"> <!--LISTA INSUMOS-->
+        <thead>
+            <th>ID</th>
+            <th>Nome</th>
+            <th>Preço</th>
+            <th>Quantidade em Estoque</th>
+            <th>Descrição</th>
+            <th>Categoria</th>
+            <th>Alterar/Excluir</th>
+            <th><a href="/admin/CadastrarProd">Cadastrar novo</a></th>
+        </thead>
+        <tbody>
+            <%for(let i=0;i<listaInsumos.length;i++) {%>
+                <tr>
+                    <td><%=listaInsumos[i].id%></td>
+                    <td><%=listaInsumos[i].nome%></td>
+                    <td><%=listaInsumos[i].preco%>R$</td>
+                    <td>A fazer</td>
+                    <td><%=listaInsumos[i].descricao%></td>
+                    <td><%=listaInsumos[i].categoria_nome%></td>
+                    <td>
+                        <a href="/admin/alterarItem/2/<%=listaInsumos[i].id%>" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
+                        <button data-id="<%=listaInsumos[i].id%>" data-tipo="1"  data-nome='<%=listaInsumos[i].nome%>' class="btn btn-danger btnExcluir"><i class="bi bi-trash-fill"></i></button>
+                    </td>
+                </tr>
+            <%}%>
+        </tbody>
+    </table>
+
+    <table class="table table-bordered mt-3" style="color: #000;" id="3"> <!--LISTA Serviços-->
+        <thead>
+            <th>ID</th>
+            <th>Nome</th>
+            <th>Preço</th>
+            <th>Quantidade em Estoque</th>
+            <th>Descrição</th>
+            <th>Alterar/Excluir</th>
+            <th><a href="/admin/CadastrarServico">Cadastrar novo</a></th>
+        </thead>
+        <tbody>
+            <%for(let i=0;i<listaServicos.length;i++) {%>
+                <tr>
+                    <td><%=listaServicos[i].id%></td>
+                    <td><%=listaServicos[i].nome%></td>
+                    <td><%=listaServicos[i].preco%>R$</td>
+                    <td>A fazer</td>
+                    <td><%=listaServicos[i].descricao%></td>
+                    <td>
+                        <a href="/admin/alterarItem/3/<%=listaServicos[i].id%>" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
+                        <button data-id="<%=listaServicos[i].id%>" data-tipo="3"  data-nome='<%=listaServicos[i].nome%>' class="btn btn-danger btnExcluir"><i class="bi bi-trash-fill"></i></button>
                     </td>
                 </tr>
             <%}%>
@@ -53,6 +109,7 @@
             <th>Marca</th>
             <th>Quantidade</th>
             <th>Alterar/Excluir</th>
+            <th><a href="/admin/CadastrarEqAgricola">Cadastrar novo</a></th>
         </thead>
         <tbody>
             <%for(let i=0;i<listaEqAg.length;i++) {%>
@@ -78,6 +135,7 @@
             <th>Nome</th>
             <th>Equipamentos</th>
             <th>Alterar/Excluir</th>
+            <th><a href="/admin/CadastrarMarca">Cadastrar novo</a></th>
         </thead>
         <tbody>
             <%for(let i=0;i<listaMarcas.length;i++) {%>
@@ -100,6 +158,7 @@
             <th>Nome</th>
             <th>Equipamentos</th>
             <th>Alterar/Excluir</th>
+            <th><a href="/admin/CadastrarCategoria">Cadastrar novo</a></th>
         </thead>
         <tbody>
             <%for(let i=0;i<listaCategorias.length;i++) {%>
