--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -1,23 +1,41 @@
 <div class="hero-wrap hero-bread" style="background-image: url('/images/pexels2.jpg');">
-      <div class="container">
-        <div class="row no-gutters slider-text align-items-center justify-content-center">
-          <div class="col-md-9 ftco-animate text-center">
-          	<p class="breadcrumbs"><span class="mr-2">ADMIN</span></p>
-            <h1 class="mb-0 bread">Painel Administrador</h1>
-          </div>
-        </div>
+  <div class="container">
+    <div class="row no-gutters slider-text align-items-center justify-content-center">
+      <div class="col-md-9 ftco-animate text-center">
+        <p class="breadcrumbs"><span class="mr-2">ADMIN</span></p>
+        <h1 class="mb-0 bread">Painel Administrador</h1>
       </div>
     </div>
-
-<div class="container" >
-  <div class="list-group">
-    <a class="list-group-item" href="/admin/servicos">Abrir Caixa</a>
-    <a class="list-group-item" href="/admin/servicos">Fechar Caixa</a>
-    <a class="list-group-item" href="/admin/listagem">Lista de Produtos</a>
-    <a class="list-group-item" href="/admin/servicos">Registrar Baixa de Estoque</a>
-    <a class="list-group-item" href="/admin/equipAgricola">Efetuar Devolução de Venda</a>
-    <a class="list-group-item" href="/admin/marcas">Efetuar Compra</a>
-    <a class="list-group-item" href="/admin/servicos">Efetuar Pagamento</a>
-    <a class="list-group-item" href="/admin/servicos">Abrir Ordem de Serviço</a>
   </div>
 </div>
+
+<div class="container">
+  <div class="row">
+    <div class="list-group col pr-0">
+      <a class="list-group-item" href="/admin/servicos">Abrir Caixa</a>
+      <a class="list-group-item" href="/admin/servicos">Fechar Caixa</a>
+      <a class="list-group-item" href="/admin/listagem">Lista de Produtos</a>
+      <a class="list-group-item" href="/admin/servicos">Registrar Baixa de Estoque</a>
+      <a class="list-group-item" href="/admin/equipAgricola">Efetuar Devolução de Venda</a>
+      <a class="list-group-item" href="/admin/marcas">Efetuar Compra</a>
+      <a class="list-group-item" href="/admin/servicos">Efetuar Pagamento</a>
+      <a class="list-group-item" href="/admin/servicos">Abrir Ordem de Serviço</a>
+    </div>
+    <div class="list-group col">
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+          Cadastrar Itens
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <li><a class="dropdown-item" href="/admin/CadastrarProduto">Cadastrar Produto</a></li>
+          <li><a class="dropdown-item" href="/admin/CadastrarProduto">Cadastrar Insumo</a></li>
+          <li><a class="dropdown-item" href="/admin/CadastrarServico">Cadastrar Serviços</a></li>
+          <li><a class="dropdown-item" href="/admin/CadastrarEqAgricola">Cadastrar Equipamentos Agrícolas</a></li>
+          <li><a class="dropdown-item" href="/admin/CadastrarMarca">Cadastrar Marcas</a></li>
+          <li><a class="dropdown-item" href="/admin/CadastrarCategoria">Cadastrar Categorias</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
