--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,9 @@ login-formulario {
   border-radius: 0.5rem;
   box-shadow: 0 0 1.8rem rgba(0, 0, 0, 0.15);
 }
+th{
+  text-align: center !important;
+}
 
 /* Estilo exclusivo para inputs do formulário */
 #formulario-cadastro input {
