--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -14,7 +14,7 @@
     <div class="list-group col pr-0">
       <a class="list-group-item" href="/admin/servicos">Abrir Caixa</a>
       <a class="list-group-item" href="/admin/servicos">Fechar Caixa</a>
-      <a class="list-group-item" href="/admin/listagem">Lista de Produtos</a>
+      <a class="list-group-item" href="/admin/listagem/1">Lista de Produtos</a>
       <a class="list-group-item" href="/admin/servicos">Registrar Baixa de Estoque</a>
       <a class="list-group-item" href="/admin/equipAgricola">Efetuar Devolução de Venda</a>
       <a class="list-group-item" href="/admin/marcas">Efetuar Compra</a>
