falta alterar Funcionario

--- a/views/admin/PJCadastro.ejs
+++ b/views/admin/PJCadastro.ejs
@@ -5,28 +5,34 @@
         <div class="form-floating mb-3">
             <input type="text" class="form-control" id="nomeval" placeholder=" " maxlength="100">
             <label for="nome">Nome:</label>
+            <p id="erro-nome" class="erro"></p>
         </div>
         <div class="form-floating mb-3">
             <input type="text" class="form-control" id="telefoneval" placeholder=" " maxlength="11">
             <label for="telefone">Telefone:</label>
+            <p id="erro-telefone" class="erro"></p>
         </div>
         <div class="form-floating mb-3">
             <input type="text" class="form-control" id="cnpjval" placeholder=" " maxlength="14">
             <label for="cnpj">CNPJ:</label>
+            <p id="erro-cnpj" class="erro"></p>
         </div>
         <div class="form-floating mb-3">
             <input type="text" class="form-control" id="emailval" placeholder=" " maxlength="100">
             <label for="email">Email:</label>
+            <p id="erro-email" class="erro"></p>
         </div>
         <div class="form-floating mb-3">
             <input type="password" class="form-control" id="senhaval" placeholder=" " maxlength="30">
             <label for="senha">Senha:</label>
+            <p id="erro-senha" class="erro"></p>
         </div>
         <div class="form-floating mb-3">
             <input type="password" class="form-control" id="senha2val" placeholder=" " maxlength="30">
             <label for="senha2">Confirme a Senha:</label>
+            <p id="erro-senha2" class="erro"></p>
         </div>
-        
+        <p id="msg-final"></p>
         <button class="btn btn-primary" id="cadastrar">Cadastrar Cliente</button>
         <a id="voltar" href="/admin/Clientes" class="btn btn-secondary">Voltar</a>
     </div>
