--- a/views/admin/adminClientes.ejs
+++ b/views/admin/adminClientes.ejs
@@ -32,8 +32,8 @@
                     <td><%=listaPF[i].senha%></td>
                     <td><%=listaPF[i].telefone%></td>
                     <td>
-                        <a href="/admin/alterarPF/<%=listaPF[i].id%>" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
-                        <button data-id="<%=listaPF[i].id%>" data-tipo="1"  data-nome='<%=listaPF[i].nome%>' class="btn btn-danger btnExcluir"><i class="bi bi-trash-fill"></i></button>
+                        <a href="/admin/alterarCliente/1/<%=listaPF[i].id%>" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
+                        <button data-id="<%=listaPF[i].id%>"  data-nome='<%=listaPF[i].nome%>' class="btn btn-danger btnExcluir"><i class="bi bi-trash-fill"></i></button>
                     </td>
                 </tr>
             <%}%>
@@ -61,7 +61,7 @@
                     <td><%=listaPJ[i].senha%></td>
                     <td><%=listaPJ[i].telefone%></td>
                     <td>
-                        <a href="/admin/alterarPJ/<%=listaPJ[i].id%>" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
+                        <a href="/admin/alterarCliente/2/<%=listaPJ[i].id%>" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
                         <button data-id="<%=listaPJ[i].id%>" data-tipo="2"  data-nome='<%=listaPJ[i].nome%>' class="btn btn-danger btnExcluir"><i class="bi bi-trash-fill"></i></button>
                     </td>
                 </tr>
@@ -92,7 +92,7 @@
                     <td><%=listaFunc[i].senha%></td>
                     <td><%=listaFunc[i].telefone%></td>
                     <td>
-                        <a href="/admin/alterarFuncionario/<%=listaFunc[i].id%>" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
+                        <a href="/admin/alterarCliente/3/<%=listaFunc[i].id%>" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
                         <button data-id="<%=listaFunc[i].id%>" data-tipo="3"  data-nome='<%=listaFunc[i].nome%>' class="btn btn-danger btnExcluir"><i class="bi bi-trash-fill"></i></button>
                     </td>
                 </tr>
