--- a/views/admin/adminCadastro.ejs
+++ b/views/admin/adminCadastro.ejs
@@ -55,37 +55,37 @@
         </div> -->
 
         <div class="form-floating mb-3">
-            <input type="text" id="login-nome" name="nome" class="form-control" placeholder=" " required>
+            <input type="text" id="login-nome" name="nome" class="form-control" placeholder=" " required maxlength="100">
             <label for="login-nome">Nome completo:</label>
           <p id="erro-nome" class="erro"></p>
         </div>
 
         <div class="form-floating mb-3">
-            <input type="text" id="login-cpf" name="cpf" class="form-control" placeholder=" " required>
+            <input type="text" id="login-cpf" name="cpf" class="form-control" placeholder=" " required maxlength="11">
             <label for="login-cpf">CPF:</label>
           <p id="erro-cpf" class="erro"></p>
         </div>
 
         <div class="form-floating mb-3">
-            <input type="text" id="login-telefone" name="telefone" class="form-control" placeholder=" " required>
+            <input type="text" id="login-telefone" name="telefone" class="form-control" placeholder=" " required maxlength="11">
             <label for="login-telefone">Telefone:</label>
           <p id="erro-telefone" class="erro"></p>
         </div>
 
         <div class="form-floating mb-3">
-            <input type="email" id="login-email" name="email" class="form-control" placeholder=" " required>
+            <input type="email" id="login-email" name="email" class="form-control" placeholder=" " required maxlength="100">
             <label for="login-email">E-mail</label>
           <p id="erro-email" class="erro"></p>
         </div>
 
         <div class="form-floating mb-3">
-            <input type="password" id="login-senha" name="senha" class="form-control" placeholder=" " required>
+            <input type="password" id="login-senha" name="senha" class="form-control" placeholder=" " required maxlength="30">
             <label for="login-senha">Senha:</label>
           <p id="erro-senha" class="erro"></p>
         </div>
 
         <div class="form-floating mb-3">
-            <input type="password" id="login-senha2" name="confirmar" class="form-control" placeholder=" " required>
+            <input type="password" id="login-senha2" name="confirmar" class="form-control" placeholder=" " required maxlength="30">
             <label for="login-confirmar">Confirmar Senha:</label>
           <p id="erro-senha2" class="erro"></p>
         </div>
