--- a/views/admin/adminCadastro.ejs
+++ b/views/admin/adminCadastro.ejs
@@ -1,59 +1,9 @@
 <script src="/js/js/adminCadastro.js" defer></script>
-    <!-- Formulario para login -->
+    <!-- Formulario para cadastro -->
 
     <div class="container d-flex justify-content-center mt-5">
       <form id="formulario-login" class="bg-white p-5 shadow rounded" style="max-width: 400px; width: 100%;" novalidate>
-        <h3 class="mb-4 text-center">Cadastro de Funcionários</h3><br><br>
-
-        <!-- <div class="form-group">
-          <div class="float-container">
-            <input type="text" id="login-nome" name="nome" class="form-control" placeholder=" " required>
-            <label for="login-nome">Nome completo:</label>
-          </div>
-          <p id="erro-nome" class="erro"></p>
-        </div>
-
-        <div class="form-group">
-          <div class="float-container">
-            <input type="text" id="login-cpf" name="cpf" class="form-control" placeholder=" " required>
-            <label for="login-cpf">CPF:</label>
-          </div>
-          <p id="erro-cpf" class="erro"></p>
-        </div>
-
-        <div class="form-group">
-          <div class="float-container">
-            <input type="text" id="login-telefone" name="telefone" class="form-control" placeholder=" " required>
-            <label for="login-telefone">Telefone:</label>
-          </div>
-          <p id="erro-telefone" class="erro"></p>
-        </div>
-
-        <div class="form-group">
-          <div class="float-container">
-            <input type="email" id="login-email" name="email" class="form-control" placeholder=" " required>
-            <label for="login-email">E-mail</label>
-          </div>
-          <p id="erro-email" class="erro"></p>
-        </div>
-
-        <div class="form-group">
-          <div class="float-container">
-            <input type="password" id="login-senha" name="senha" class="form-control" placeholder=" " required>
-            <label for="login-senha">Senha:</label>
-          </div>
-          <p id="erro-senha" class="erro"></p>
-        </div>
-
-        <div class="form-group">
-          <div class="float-container">
-            <input type="password" id="login-senha2" name="confirmar" class="form-control" placeholder=" " required>
-
-            <label for="login-confirmar">Confirmar Senha:</label>
-          </div>
-          <p id="erro-senha2" class="erro"></p>
-        </div> -->
-
+        <h3 class="mb-4 text-center">Cadastro de Funcionários</h3>
         <div class="form-floating mb-3">
             <input type="text" id="login-nome" name="nome" class="form-control" placeholder=" " required maxlength="100">
             <label for="login-nome">Nome completo:</label>
@@ -64,6 +14,11 @@
             <input type="text" id="login-cpf" name="cpf" class="form-control" placeholder=" " required maxlength="11">
             <label for="login-cpf">CPF:</label>
           <p id="erro-cpf" class="erro"></p>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="text" id="login-cargo" name="cargo" class="form-control" placeholder=" " required maxlength="11">
+            <label for="login-cargo">Cargo:</label>
+          <p id="erro-cargo" class="erro"></p>
         </div>
 
         <div class="form-floating mb-3">
@@ -95,8 +50,7 @@
         </div>
 
         <div class="text-center mt-3">
-          <p id="mensagem-sucesso" class="text-success" style="display: none;"></p>
-          <p id="mensagem-erro" class="text-success" style="display: none;"></p>
+          <p id="mensagem-final"></p>
         </div>
 
         <div class="text-center mt-3">
