crud em pé novamente

--- a/views/admin/adminLogin.ejs
+++ b/views/admin/adminLogin.ejs
@@ -22,7 +22,7 @@
         </div>
 
         <div class="text-center mt-3">
-          <p id="mensagem-erro" class="text-danger" style="display: none;">Credenciais Incorretas!</p>
+          <p id="mensagem-final"></p>
         </div>
 
         <div class="text-center mt-3">
