--- a/views/layout_admin.ejs
+++ b/views/layout_admin.ejs
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom w-100 admin-topbar">
       <div class="container-fluid">
-        <a class="navbar-brand fw-bold" href="/admin">EGAC</a>
+        <a class="navbar-brand fw-bold" href="/">EGAC</a>
         <span class="navbar-divider"></span>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNav" aria-controls="adminNav" aria-expanded="false" aria-label="Toggle navigation">
