--- a/views/admin/cadastrarProd.ejs
+++ b/views/admin/cadastrarProd.ejs
@@ -31,6 +31,15 @@
                 </select>
                 <label for="categoria">Categoria:</label>
         </div>
+        <div class="form-floating mb-3" id="marca">
+            <select name="marca" id="marcaval" class="form-control">
+            <option value="0" selected>...</option>
+            <% for(let i=0; i<listaMarcas.length ; i++) {%>
+                <option value="<%=listaMarcas[i].id%>"><%=listaMarcas[i].nome%></option>
+                <%}%>
+            </select>
+            <label for="tipoItem">Marca:</label>
+        </div>
         <button class="btn btn-primary" id="cadastrar">Cadastrar Item</button>
         <a id="voltar" href="/admin/listagem/1" class="btn btn-secondary">Voltar</a>
     </div>
