Arrumando layout admin

--- a/views/admin/listagem.ejs
+++ b/views/admin/listagem.ejs
@@ -1,10 +1,10 @@
 <script src="/js/js/listagem.js" defer></script>
 <script src="/js/js/listagem-header.js" defer></script>
 
-<div class="container-sm">
-    <div class="d-flex align-items-center justify-content-between mb-3">
-        <div class="dropdown">
-            <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="titleDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+<div class="container-fluid">
+    <div class="d-flex align-items-center mb-4">
+        <div class="dropdown me-3">
+            <button class="btn btn-lg btn-link text-dark text-decoration-none dropdown-toggle p-0" type="button" id="titleDropdown" data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 24px; font-weight: 600;">
                 <span id="titleSelected"><% if(tipoListar == 1){ %>Produtos<% } else if(tipoListar == 2){ %>Insumos<% } else if(tipoListar == 3){ %>Serviços<% } else if(tipoListar == 4){ %>Equipamentos Agricolas<% } else if(tipoListar == 5){ %>Marcas<% } else if(tipoListar == 6){ %>Categorias<% } else { %>Listagem de Itens<% } %></span>
             </button>
             <ul class="dropdown-menu" aria-labelledby="titleDropdown">
@@ -16,7 +16,7 @@
                 <li><a class="dropdown-item title-option" href="#" data-value="6">Categorias</a></li>
             </ul>
         </div>
-        <a href="/admin" class="btn btn-secondary">Voltar</a>
+        <a href="<% if(tipoListar == 1){ %>/admin/CadastrarProduto<% } else if(tipoListar == 2){ %>/admin/CadastrarProduto<% } else if(tipoListar == 3){ %>/admin/CadastrarServico<% } else if(tipoListar == 4){ %>/admin/CadastrarEqAgricola<% } else if(tipoListar == 5){ %>/admin/CadastrarMarca<% } else if(tipoListar == 6){ %>/admin/CadastrarCategoria<% } else { %>/admin<% } %>" class="btn btn-success ms-auto">Incluir cadastro</a>
     </div>
     <div class="form-floating mt-3 d-none">
         <select name="select" id="select" class="form-control">
@@ -42,7 +42,6 @@
             <th>Categoria</th>
             <th>Marca</th>
             <th>Alterar/Excluir</th>
-            <th><a href="/admin/CadastrarProduto">Cadastrar novo</a></th>
         </thead>
         <tbody>
             <%for(let i=0;i<listaProdutos.length;i++) {%>
@@ -73,7 +72,6 @@
             <th>Categoria</th>
             <th>Marca</th>
             <th>Alterar/Excluir</th>
-            <th><a href="/admin/CadastrarProduto">Cadastrar novo</a></th>
         </thead>
         <tbody>
             <%for(let i=0;i<listaInsumos.length;i++) {%>
@@ -101,7 +99,6 @@
             <th>Preço</th>
             <th>Descrição</th>
             <th>Alterar/Excluir</th>
-            <th><a href="/admin/CadastrarServico">Cadastrar novo</a></th>
         </thead>
         <tbody>
             <%for(let i=0;i<listaServicos.length;i++) {%>
@@ -128,7 +125,6 @@
             <th>Categoria</th>
             <th>Marca</th>
             <th>Alterar/Excluir</th>
-            <th><a href="/admin/CadastrarEqAgricola">Cadastrar novo</a></th>
         </thead>
         <tbody>
             <%for(let i=0;i<listaEqAg.length;i++) {%>
@@ -153,7 +149,6 @@
             <th>ID</th>
             <th>Nome</th>
             <th>Alterar/Excluir</th>
-            <th><a href="/admin/CadastrarMarca">Cadastrar novo</a></th>
         </thead>
         <tbody>
             <%for(let i=0;i<listaMarcas.length;i++) {%>
@@ -174,7 +169,6 @@
             <th>ID</th>
             <th>Nome</th>
             <th>Alterar/Excluir</th>
-            <th><a href="/admin/CadastrarCategoria">Cadastrar novo</a></th>
         </thead>
         <tbody>
             <%for(let i=0;i<listaCategorias.length;i++) {%>
