--- a/views/layout_admin.ejs
+++ b/views/layout_admin.ejs
@@ -39,7 +39,6 @@
                       <a class="dropdown-item" href="/admin/listagem/1">Produtos</a>
                       <a class="dropdown-item" href="/admin/clientes">Clientes e fornecedores</a>
                       <a class="dropdown-item" href="/admin/FuncionarioCadastro">Funcionários</a>
-                      <a class="dropdown-item" href="/admin/listagem/5">Marcas</a>
                     </div>
                     <div class="col-md-4">
                       <h6 class="dropdown-header">Ferramentas</h6>
@@ -97,11 +96,16 @@
                 <li>
                   <div class="row p-3">
                     <div class="col-md-4">
-                      <h6 class="dropdown-header">Gestão financeira</h6>
-                      <a class="dropdown-item" href="/admin/caixa">Caixas e bancos</a>
-                      <a class="dropdown-item" href="/admin/contasPagar">Contas a pagar</a>
-                      <a class="dropdown-item" href="/admin/contasReceber">Contas a receber</a>
-                      <a class="dropdown-item" href="/admin/controleCaixa">Controle de caixa</a>
+                      <h6 class="dropdown-header">Caixa</h6>
+                      <a class="dropdown-item" href="/admin/caixa/abrir">Abrir Caixa</a>
+                      <a class="dropdown-item" href="/admin/caixa/fechar">Fechar Caixa</a>
+                      <a class="dropdown-item" href="/admin/controleCaixa">Controle de Caixa</a>
+                    </div>
+                    <div class="col-md-4">
+                      <h6 class="dropdown-header">Gestão Financeira</h6>
+                      <a class="dropdown-item" href="/admin/pagamento">Efetuar Pagamento</a>
+                      <a class="dropdown-item" href="/admin/contasPagar">Contas a Pagar</a>
+                      <a class="dropdown-item" href="/admin/contasReceber">Contas a Receber</a>
                     </div>
                   </div>
                 </li>
