--- a/views/admin/ordemServico/abrir.ejs
+++ b/views/admin/ordemServico/abrir.ejs
@@ -44,6 +44,11 @@
                 <label for="funcval">Funcionário responsável:</label>
             </div>
         </div>
+
+        <div class="form-floating mb-3" id="comentario"> 
+            <input type="text" class="form-control" id="comentarioval" placeholder=" " maxlength="200">
+            <label for="comentarioval">Comentários:(Opcional)</label>
+        </div>
         
         <button class="btn btn-primary" id="cadastrar">Abrir Ordem de Serviço</button>
         <a href="/admin/OrdemServicos" class="btn btn-secondary">Voltar</a>
